# FlaskReactExample

./: .gitignore  LICENSE  package-lock.json  package.json
backend/: app.py  config.py  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py  models.py  routes.py
backend/migrations/versions/: 0891110c426f_initial_migration.py  e85dbb645c89_your_migration_message.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: NavBar.tsx  UserForm.tsx  UsersList.tsx
frontend/src/pages/: Home.tsx  UserPage.tsx
frontend/src/types/: User.ts
